--- a/Rompecabezas/index.html
+++ b/Rompecabezas/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<!-- saved from url=(1472)https://00f74ba44bff02e88ac4c6c341496dd08ba5d99cf0-apidata.googleusercontent.com/download/storage/v1/b/miswebapps/o/RompeCabezas%2FRompecabezas36.html?jk=AFshE3V-HbR-WKNO-WAIdayOUhacR-CmaIb1CQIVNcXy0Pdw-2hxms-fNc4emQEix2TZAJGaAJ17cyUqGAgUouo_0DEzOZy1xP9uBZ7oxCJT6E3oLBmwQPJkSqNZ7eNMjJN-B1EDhNNpaUqFmDRVHW79ZW0H65X6GWttKuIvx_Bp36K31dbJ_98lNt_UBufTtJaTiTgEi0iJXfDm4slNQaEVLQ68cFuiQwgAp0OP0S923kfqKOr4MmTbDC38fy8MYORF3MVj2L17Mo3V1maPSd5VFMcZqd5SIRDB05ie0qVq0aeGOnaUj7Ig6VoI75Nu_hHdVczSxv22a1TzTRZ1Ftzev7NuMggpG92t467pgZjPu0jeAS9dXoFvToeDWKOyOOZX_4OHzUyY85LH0Pnj0xzddsfmNP1cF71pdhlWV_WBpaFvbObu4xySCYevWnD41e3zv8tZZ3XLQWt-o3um8A5Vu4GJG5SrazndGq7-hKeZTGlcuD2l3RfHgO-um59Ichut9jGWNYu2xq7dT8hDjdGTLIDWyN3Q0hXaNEmJ1Im8EUMRXYZW5o4gdIZ5-euRGvUXZyXcb5BBtYqECRgDxvvxTIuFeab4Ztx4JbOluvV2W0gSFhfQD7h3F_Ji-1ny__Hf0LZU-KCJNBLhW5JZ_A-fwXpzjFwwdkOzIcdmXlDobXYHCg3tXFVYk0_W1QxOgLxwlaUkKD7sIR48FsPm_F9UF0on5J1-Us-ZJpcvR799fQQ-iau772uQ36xTKFtOydVZUKNYCM-1tpqiqYNmhjWBRj0RtjI8oHQdWZNB12mv7T-p6guy3Wu4U8ucIfPzGPGj4y_j8fsxfRci9DJKFVr9wk7WhAVz4qdCDHbdlA3KilJmDK162gGYovs4s9iPwn7El8B9rNcYigwcLgaR72tp8cOUhWvWQ3ITi_x7wcmZ8RrG_pBKANmyRO4uUzi439emMyns6khttOMQc8QXV4xBWSSIxjSP6nTNuz7sFIuqma2yAMC0kMvSc0Havg6oaYj2EdAGbE_WUNuGl6rGa-vYeWxSa1lYzEkQr21qc6vcfXqvYIp4UJFLCbUfUlwtfBbV675evwocgArE0T3V8f45_5lp9Uj0qLjHPboN0QChWFrkXsBJf1m07V3Y5h0n7TpoScrz8Y-FgSjd_b6AXRkpnXm5yQdwXHl2NLDqvnKOSnCrFMnbOKUzNOPmzkHsEWZqiKD6f5LHJ1LKOMJqw10hCP3d9o9MM-V9vwzwIUfFWiDHKE-YZnTWj-MUA-WgmLQbS6tJOExgxRFMTnH26BOInxdqEqo&isca=1 -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<!--
+	NOTES:
+	1. All tokens are represented by '$' sign in the template.
+	2. You can write your code only wherever mentioned.
+	3. All occurrences of existing tokens will be replaced by their appropriate values.
+	4. Blank lines will be removed automatically.
+	5. Remove unnecessary comments before creating your template.
+-->
+<html>
+<head>
+<meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>Rompecabezas36</title>
 <!-- write your code here -->
@@ -13,8 +21,8 @@
 	top:0;bottom:0;
   }
 </style>
-<script src="./Rompecabezas36_files/createjs-2015.11.26.min.js.descarga"></script>
-<script src="./Rompecabezas36_files/Rompecabezas36.js.descarga"></script>
+<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+<script src="Rompecabezas36.js?1598902884114"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
@@ -99,6 +107,6 @@ function playSound(id, loop) {
 		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1280px; height:720px; position: absolute; left: 0px; top: 0px; display: none;">
 		</div>
 	</div>
-    <div id="_preload_div_" style="display: inline-block; height:720px; width: 1280px; vertical-align=middle;position:absolute;left:0px;top:0px;text-align: center;">	<span style="display: inline-block; height: 100%; vertical-align: middle;"></span>	<img src="./Rompecabezas36_files/_preloader.gif" style="vertical-align: middle; max-height: 100%"></div>
-
-</body></html>
+    <div id='_preload_div_' style='display: inline-block; height:720px; width: 1280px; vertical-align=middle;position:absolute;left:0px;top:0px;text-align: center;'>	<span style='display: inline-block; height: 100%; vertical-align: middle;'></span>	<img src=images/_preloader.gif?1598902884115 style='vertical-align: middle; max-height: 100%'/></div>
+</body>
+</html>
